Fix CSS display properties for same-line and next-line

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Display</title>
     <style>
         .same-line {
-            
+            display: inline-block;   
         }
 
         .next-line {
-            
+            display: block;  
         }
     </style>
 </head>
